Add base structure

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,19 @@
-@import './common';
-@import './example';
+@import './utils/variables';
+@import './base/reset';
+@import './utils/mixins';
+@import './base/overall';
+@import './utils/hidden.scss';
+@import './layouts/hero-header';
+@import './layouts/products';
+@import './layouts/about';
+@import './layouts/advantages';
+@import './layouts/gallery';
+@import './layouts/customer-reviews';
+@import './layouts/contacts';
+@import './layouts/footer';
+@import './components/backdrop';
+@import './modals/modal1';
+@import './modals/modal2';
+@import './modals/modal3';
+@import './modals/modal4';
+@import './modals/modal5';
