--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './utils/mixins';
 @import './base/overall';
 @import './utils/hidden.scss';
+@import './components/container';
 @import './layouts/hero-header';
 @import './layouts/products';
 @import './layouts/about';
