--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,4 +1,5 @@
 .footer-container{
+    width: 100%;
     background-color: #84A178;
 }
 
@@ -27,7 +28,7 @@
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    fill: #84A178;;
+    fill: #84A178;
     background: #F8D24E;
 }
 
