--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,8 +1,9 @@
 .container {
-  width: 100%;
+  min-width: 100%;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
+  
   @include mobile {
     width: 480px;
   }
