--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -1,7 +1,7 @@
 .advantage{
-
+padding-bottom: 86px;
     &-titl{
-        display: block;
+        
         font-family: 'Roboto';
         font-weight: 700;
         font-size: 36px;
