--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -8,7 +8,7 @@
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantage-item">
-                <h3 class="">16kg</h3>
+                <h3 class="">16</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantage-item">
