--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -32,6 +32,21 @@ padding-bottom: 86px;
     color: var(--main-text-color);
     
     }
+    &-item__mr{
+
+     margin-top: 16px;
+     margin-bottom: 18px;
+    
+      @include tablet {
+     margin-top: 32px;
+     margin-bottom: 16px;
+     }
+     @include desktop {
+          margin-top: 40px;
+         /* margin-bottom: 16px;*/
+          }
+
+    }
      &-text{
     
     font-weight: 700;
