updated images and scss

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -4,15 +4,15 @@
     
         <ul class="advantage-list list">
             <li  class="advantage-item">
-                <h3  class="advantage-titl">721</h3>
+                <h3  class="advantage-titl advantage-item__mr">721</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantage-item">
-                <h3 class="advantage-titl">16kg</h3>
+                <h3 class="advantage-titl advantage-item__mr" >16kg</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantage-item">
-                <h3 class="advantage-titl">84</h3>
+                <h3 class="advantage-titl advantage-item__mr">84</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul> 
