--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -13,7 +13,7 @@
      }
 
   &-item::before{
-     content:' ';
+     content:'background-image: url(../images/advantage/Frame-min.png);';
      background-image: url(../images/advantage/Frame-min.png);
      
      }
