--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -14,16 +14,17 @@
 
   &-item::after{
      content:'background-image: url(../images/advantage/Frame-min.png); background-repeat:no-repeat;';
-     background-image: url(../images/advantage/Frame-min.png);
+     /*background-image: url(../images/advantage/Frame-min.png);*/
      background-repeat:no-repeat;
 
      }
   &-item:first-child::after{
      content:'background-image: url(../images/advantage/cow-min.png);';
-     background-image: url(../images/advantage/cow-min.png);
+     /*background-image: url(../images/advantage/cow-min.png);*/
+     
      }
   
-  &-item:last-child::before{
+  &-item:last-child::after{
      content:'background-image: url(../images/advantage/ice-min.png);';
      background-image: url(../images/advantage/ice-min.png);
      }
