--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -27,6 +27,8 @@
   &-item:last-child::after{
      content:'background-image: url(../images/advantage/ice-min.png);';
      background-image: url(../images/advantage/ice-min.png);
+     width: 50px;
+     height: 50px;
      }
     &-titl
     {
