--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -16,6 +16,7 @@
      content:'background-image: url(../images/advantage/Frame-min.png); background-repeat:no-repeat;';
      /*background-image: url(../images/advantage/Frame-min.png);*/
      background-repeat:no-repeat;
+     z-index: 1;
 
      }
   &-item:first-child::after{
@@ -30,6 +31,8 @@
      width: 50px;
      height: 50px;
      }
+
+
     &-titl
     {
      font-family: "Roboto";
