--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -13,7 +13,7 @@
      }
 
   &-item::before{
-     content:'background-image: url(../images/advantage/Frame-min.png)';
+     content:'../images/advantage/Frame-min.png';
      /*background-image: url(../images/advantage/Frame-min.png);*/
      background-repeat:no-repeat;
      z-index: 1;
