--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -13,8 +13,8 @@
      }
 
   &-item::before{
-     content:'../images/advantage/Frame-min.png';
-     /*background-image: url(../images/advantage/Frame-min.png);*/
+     content:' ';
+     background-image: url(../images/advantage/Frame-min.png);
      background-repeat:no-repeat;
      z-index: 1;
 
