--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -16,17 +16,20 @@
      content:' ';
      background-image: url(../images/advantage/Frame-min.png);
      background-repeat:no-repeat;
-     z-index: 1;
+     width: 50px;
+     height: 50px;
 
      }
   &-item:first-child::before{
-     content:'background-image: url(../images/advantage/cow-min.png)';
-     /*background-image: url(../images/advantage/cow-min.png);*/
+     content:' ';
+     background-image: url(../images/advantage/cow-min.png);
+     width: 50px;
+     height: 50px;
      
      }
   
   &-item:last-child::before{
-     content:'background-image: url(../images/advantage/ice-min.png)';
+     content:' ';
      background-image: url(../images/advantage/ice-min.png);
      width: 50px;
      height: 50px;
