--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -16,8 +16,7 @@
      content:' ';
      background-image: url(../images/advantage/Frame-min.png);
      background-repeat:no-repeat;
-     width: 50px;
-     height: 50px;
+     background-position: 50% -10%;
 
      }
   &-item:first-child::before{
