--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -1,4 +1,5 @@
 .advantage{
+     background-image: url(../images/advantage/Frame-min.png);
      background-color: var(--main-background-color);
      max-width: 1600px;
      margin-left: auto;
@@ -16,12 +17,13 @@
      content:' ';
      background-image: url(../images/advantage/Frame-min.png);
      background-repeat:no-repeat;
-     background-position: 50% -10%;
+     background-position: 50% 50%;
      background-size: 50px 50px;
      }
   &-item:first-child::before{
      content:' ';
      background-image: url(../images/advantage/cow-min.png);
+     background-position: 50% 50%;
      background-size: 50px 50px;
      
      }
@@ -29,6 +31,7 @@
   &-item:last-child::before{
      content:' ';
      background-image: url(../images/advantage/ice-min.png);
+     background-position: 50% 50%;
      background-size: 50px 50px;
      }
 
