--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -19,6 +19,7 @@
      background-repeat:no-repeat;
      background-position: 50% 50%;
      background-size: 50px 50px;
+     display: block;
      }
   &-item:first-child::before{
      content:' ';
