--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -15,7 +15,7 @@
 
   &-item::before{
      content:' ';
-     display: block;
+     display: inline-block;
      background-image: url(../images/advantage/Frame-min.png);
      background-repeat:no-repeat;
      background-position: 50% 50%;
@@ -24,7 +24,7 @@
      }
   &-item:first-child::before{
      content:' ';
-     display: block;
+     display: inline-block;
      background-image: url(../images/advantage/cow-min.png);
      background-position: 50% 50%;
      background-size: 50px 50px;
