--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -12,7 +12,7 @@
   @include desktop {
      padding-bottom: 180px;
      }
-     &-item{
+     &-list{
           position: relative;
      }
   &-item::before{
