--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -16,22 +16,19 @@
           position: relative;
      }
   &-item::before{
-     content:'                      ';
-     position: absolute;
+     content:' ';
+     
      display: block;
      background-image: url(../images/advantage/Frame-min.png);
      background-repeat:no-repeat;
-     background-position: 50% 50%;
-     background-size: 50px 50px;
+     background-size: contain;
      display: block;
      }
   &-item:first-child::before{
-     content:'                     1';
-     position: absolute;
-     display: block;
+     content:' ';
+    
      background-image: url(../images/advantage/cow-min.png);
-     background-position: 50% 50%;
-     background-size: 50px 50px;
+     background-size: contain;
      
      }
   
@@ -40,8 +37,7 @@
      position: absolute;
      display: block;
      background-image: url(../images/advantage/ice-min.png);
-     background-position: 50% 50%;
-     background-size: 50px 50px;
+     background-size: contain;
      }
 
 
