--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -26,20 +26,20 @@
      content:'';
        
      background-image: url(../images/advantage/Frame-min.png);
-     
+     background-size: contain;
      }
   &-item:first-child::before{
      content:'';
     
      background-image: url(../images/advantage/cow-min.png);
-     
+     background-size: contain;
      }
   
   &-item:last-child::before{
      content:'';
           
      background-image: url(../images/advantage/ice-min.png);
-     
+     background-size: contain;
      }
 
 
