--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -23,21 +23,25 @@
 
 
   &-item::before{
-     content:' ';
+     content:'';
        
      background-image: url(../images/advantage/Frame-min.png);
+     background-repeat:no-repeat;
      background-size: contain;
+     display: block;
      }
   &-item:first-child::before{
      content:' ';
     
      background-image: url(../images/advantage/cow-min.png);
      background-size: contain;
+     
      }
   
   &-item:last-child::before{
-     content:' ';
-          
+     content:'';
+     
+     display: block;
      background-image: url(../images/advantage/ice-min.png);
      background-size: contain;
      }
