--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -19,6 +19,7 @@
        width: 50px;
        height: 50px;
        background-size: contain;
+       
      }
 
 
@@ -29,6 +30,8 @@
      background-repeat:no-repeat;
      background-size: contain;
      display: block;
+     margin-left: auto;
+     margin-right: auto;
      }
   &-item:first-child::before{
      content:'';
