--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -13,8 +13,8 @@
      padding-bottom: 180px;
      }
      
-     &-item::before,
-     &-item::after {
+     &-item::before
+     {
        content: "";
        width: 50px;
        height: 50px;
@@ -97,9 +97,9 @@
     }
      &-text{
     
-     font-weight: 700;
-     font-size: 12px;
-     line-height: 1.7;        
+          font-weight: 700;
+          font-size: 12px;
+          line-height: 1.7;        
           @include tablet 
           {
           font-weight: 400;
