updated html and scss

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,7 +3,7 @@
     <h2 class="visually-hidden">Advantage</h2>
     
         <ul class="advantage-list list">
-            <li  class="advantage-item">
+            <li  class="advantage-item advantage-list__mr ">
                 <h3  class="advantage-titl advantage-item__mr">721</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
