--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -47,7 +47,25 @@
      background-image: url(../images/advantage/ice-min.png);
    
      }
+     &-list__mr:not(:last-child) {
+      margin-bottom: 16px;
+    }
 
+    &-item__mr
+    {
+     margin-top: 16px;
+     margin-bottom: 18px;
+    
+          @include tablet 
+          {
+          margin-top: 32px;
+          margin-bottom: 16px;
+          }
+          @include desktop {
+          margin-top: 40px;
+         /* margin-bottom: 16px;*/
+          }
+    }
 
     &-titl
     {
@@ -79,22 +97,7 @@
     color: var(--main-text-color);
     
     }
-
-    &-item__mr
-    {
-     margin-top: 16px;
-     margin-bottom: 18px;
     
-          @include tablet 
-          {
-          margin-top: 32px;
-          margin-bottom: 16px;
-          }
-          @include desktop {
-          margin-top: 40px;
-         /* margin-bottom: 16px;*/
-          }
-    }
      &-text{
     
           font-weight: 700;
@@ -117,7 +120,5 @@
     color: var(--main-text-color);
      }
 
-     &-text:not(:last-child) {
-          margin-bottom: 16px;
-        }
+     
     }
