updated html and scss

--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -47,9 +47,26 @@
      background-image: url(../images/advantage/ice-min.png);
    
      }
-     &-list__mr:not(:last-child) {
+     &-list__mr
+     {
+      margin-bottom: 28px;
+      @include tablet
+      {
+         margin-bottom: 0px;
+      }
+      }
+      &-list__mr:first-child
+      {
+         margin-bottom: 0px;
+      }
+      &-list__mr:last-child
+      {
+         margin-bottom: 22px;
+      }
+    
+    /* &-list__mr:not(:last-child) {
       margin-bottom: 16px;
-    }
+    }*/
 
     &-item__mr
     {
