--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -36,7 +36,7 @@
   &-item:first-child::before{
      content:'';
     
-     background-image: url(../images/advantage/cow-min.png);
+     /*background-image: url(../images/advantage/cow-min.png);*/
      
      
      }
