--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -22,6 +22,27 @@
        
      }
 
+     &-list
+     {
+      display: none;
+      flex-wrap: nowrap;
+      gap: 0px;
+      
+         @include tablet 
+         {
+         display: flex;
+         flex-wrap: wrap;
+         gap: 80px;
+         justify-content: center;
+         }
+         @include desktop 
+         {
+         display: flex;
+         flex-wrap: wrap;
+         gap: 32px;
+         justify-content: center;
+         }
+      }
 
   &-item::before{
      content:'';
