--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -57,7 +57,7 @@
   &-item:first-child::before{
      content:'';
     
-     /*background-image: url(../images/advantage/cow-min.png);*/
+     background-image: url(../images/advantage/cow-min.png);
      
      
      }
