--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -7,11 +7,15 @@
                 <h3  class="advantage-titl advantage-item__mr">721</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantage-item">
+            <li class="advantage-item advantage-list__mr">
                 <h3 class="advantage-titl advantage-item__mr" >16kg</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantage-item">
+            <li class="advantage-item advantage-list__mr">
+                <h3 class="advantage-titl advantage-item__mr">84</h3>
+                <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="advantage-item advantage-list__mr">
                 <h3 class="advantage-titl advantage-item__mr">84</h3>
                 <p class="advantage-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
