--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -45,8 +45,8 @@
          /*width: calc((100% - 80px) / 3);*/
          }
          @include desktop{
-            width: calc((100% - 32px) / 3);
-         /*width: 368px;*/
+            /*width: calc((100% - 32px) / 3);*/
+         width: 368px;
          }
       }
 
