--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -42,9 +42,9 @@
          height: auto;
          @include tablet{
          
-         width: 152px;
+         /*width: 152px;*/
          height: 253px;
-         /*width: calc((100% - 80px) / 3);*/
+         width: calc((100% - 80px) / 3);
          }
          @include desktop{
             /*width: calc((100% - 32px) / 3);*/
